# iso2god-rs-web

./: .dockerignore  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  FTP_TRANSFER_FEATURE.md  GITHUB_ACTIONS.md  README.md  THREAD_SELECTOR_FEATURE.md  WEB_INTERFACE_README.md  WEB_UI_IMPROVEMENTS.md  docker-compose.yml  renovate.json  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: docker-build.yml  release.yml  sonarqube.yml
examples/: list_files.rs
examples/game_title/: main.rs
public/: script.js  style.css
templates/: index.html.tera
