[package]
name = "iso2god"
version = "1.8.0"
description = "A tool to convert between Xbox 360 ISO and Games On Demand file formats"
repository = "https://github.com/iliazeus/iso2god-rs"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
bitflags = "2.11.0"
byteorder = "1.5.0"
clap = { version = "4.6.0", features = ["derive"] }
num_enum = "0.7.6"
rayon = "1.11.0"
sha1 = "0.11.0"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.50.0", features = ["full"] }
tempfile = "3.27.0"
tera = "1.20.1"
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
suppaftp = { version = "8.0.2", features = ["native-tls"] }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.149"

[profile.release]
strip = true
lto = true

[[bin]]
name = "iso2god-web"
path = "src/bin/iso2god-web.rs"
